Bug 7780 - Crashes when opening PDF with an attachment
Summary: Crashes when opening PDF with an attachment
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-05 08:41 UTC by Carlos Garcia Campos
Modified: 2006-08-05 10:15 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Carlos Garcia Campos 2006-08-05 08:41:08 UTC
The crash is in the glib bindings, but the problem seems to be in the core.
Before crash it prints "Error: Invalid page tree".

The PDF file is here:
http://www.firstgreatwestern.co.uk/Documents/Custom/OT60479%20PTT%201A%20-%20C.pdf

It works with acroread.
Comment 1 Albert Astals Cid 2006-08-05 10:15:00 UTC
fixed on cvs


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.